--- a/css/style.scss
+++ b/css/style.scss
@@ -1,1 +1,41 @@
 /**/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
+
+* {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    outline: none;
+    border: none;
+    text-transform: capitalize;
+    transition: all .2s linear;
+}
+
+
+$pink: #e84393;
+$black: #333;
+$white: #fff;
+$light-color: #666;
+$light-bg: #eee;
+$border: .2rem solid $black;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
