--- a/css/style.scss
+++ b/css/style.scss
@@ -21,8 +21,61 @@ $light-color: #666;
 $light-bg: #eee;
 $border: .2rem solid $black;
 
+@mixin grid($val){
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax($val, 1fr));
+    gap: 1.5rem;
+}
+
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+}
 
 
+/* ======= Header Section/Seção de cabeçalho ======= */
+.header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background: $white;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    display: flex;
+    align-items: center;
+    padding: 0 9%;
+
+    .logo {
+        font-size: 2.5rem;
+        color: $black;
+        font-weight: bolder;
+        margin-right: auto;
+    }
+
+    .navbar {
+
+        ul {
+            list-style: none;
+
+            li {
+                position: relative;
+                float: left;
+
+                a {
+                    font-size: 1.7rem;
+                    color: $light-color;
+                    padding: 2rem;
+                    display: block;
+
+                    &:hover {
+                        background: $light-bg;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 
