--- a/css/style.scss
+++ b/css/style.scss
@@ -62,6 +62,10 @@ html {
                 position: relative;
                 float: left;
 
+                &:hover ul {
+                    display: block;
+                }
+
                 a {
                     font-size: 1.7rem;
                     color: $light-color;
@@ -72,7 +76,31 @@ html {
                         background: $light-bg;
                     }
                 }
+
+                ul {
+                    position: absolute;
+                    left: 0;
+                    width: 20rem;
+                    background: $white;
+                    display: none;
+
+                    li {
+                        width: 100%;
+                    }
+                }
             }
+        }
+    }
+
+    .icons div,
+    .icons a {
+        font-size: 2.5rem;
+        color: $black;
+        cursor: pointer;
+        margin-left: 2rem;
+
+        &:hover {
+            color: $pink;
         }
     }
 }
