--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,21 @@ html {
   align-items: center;
   padding: 2rem;
 }
+.header .search-form input {
+  width: 100%;
+  height: 100%;
+  padding-right: 1.7rem;
+  color: #666;
+  text-transform: none;
+}
+.header .search-form label {
+  font-size: 2.5rem;
+  color: #333;
+  cursor: pointer;
+}
+.header .search-form label:hover {
+  color: #e84393;
+}
 
 #menu-btn {
   display: none;
