--- a/css/style.scss
+++ b/css/style.scss
@@ -115,6 +115,24 @@ html {
         height: 6rem;
         align-items: center;
         padding: 2rem;
+
+        input {
+            width: 100%;
+            height: 100%;
+            padding-right: 1.7rem;
+            color: $light-color;
+            text-transform: none;
+        }
+
+        label {
+            font-size: 2.5rem;
+            color: $black;
+            cursor: pointer;
+
+            &:hover {
+                color: $pink;
+            }
+        }
     }
 }
 
