--- a/css/style.css
+++ b/css/style.css
@@ -109,4 +109,10 @@ html {
   display: none;
 }
 
+/*
+
+    sass --watch ./css/style.scss:./css/style.css
+
+*/
+
 /*# sourceMappingURL=style.css.map */
