--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ html {
   display: flex;
   align-items: center;
   padding: 0 9%;
-  /*Search form */
 }
 .header .logo {
   font-size: 2.5rem;
@@ -86,13 +85,19 @@ html {
   border-top: 0.2rem solid #333;
   background: #fff;
   height: 6rem;
+  display: flex;
   align-items: center;
   padding: 2rem;
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+.header .search-form.active {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 .header .search-form input {
   width: 100%;
   height: 100%;
-  padding-right: 1.7rem;
+  padding-right: 1rem;
+  font-size: 1.7rem;
   color: #666;
   text-transform: none;
 }
