--- a/css/style.scss
+++ b/css/style.scss
@@ -146,6 +146,63 @@ html {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Media queries Responsividade*/
+
+
+
 /*
 
     sass --watch ./css/style.scss:./css/style.css
