--- a/css/style.scss
+++ b/css/style.scss
@@ -200,8 +200,62 @@ html {
 
 
 /*Media queries Responsividade*/
+@media (max-width: 1200px){
+
+    html {
+        font-size: 55%;
+    }
+
+    .header {
+        padding: 0 2rem;
+    }
+}
 
 
+@media (max-width: 768px){
+
+    #menu-btn {
+        display: inline-block;
+    }
+
+    .header {
+        padding: 2rem;
+
+        .navbar {
+            position: absolute;
+            top: 99%;
+            left: 0;
+            right: 0;
+            background: $white;
+            clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+
+            &.active {
+                clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+            }
+
+            ul li {
+                width: 100%;
+
+                ul {
+                    position: relative;
+                    width: 100%;
+
+                    li a {
+                        padding-left: 4rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+@media (max-width: 450px){
+
+    html {
+        font-size: 50%;
+    }
+}
 
 /*
 
