--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ html {
   overflow-x: hidden;
 }
 
+section {
+  padding: 2rem 9%;
+}
+
 /* ======= Header Section/Seção de cabeçalho ======= */
 .header {
   position: sticky;
@@ -114,6 +118,27 @@ html {
   display: none;
 }
 
+/* ======= Footer Section/Seção de rodapé ======= */
+.footer .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 1.5rem;
+}
+.footer .box-container .box h3 {
+  font-size: 2.2rem;
+  color: #333;
+  padding: 1rem 0;
+}
+.footer .box-container .box a {
+  display: block;
+  font-size: 1.4rem;
+  color: #666;
+  padding: 1rem 0;
+}
+.footer .box-container .box a i {
+  color: #e84393;
+}
+
 /*Media queries Responsividade*/
 @media (max-width: 1200px) {
   html {
@@ -122,6 +147,10 @@ html {
 
   .header {
     padding: 0 2rem;
+  }
+
+  section {
+    padding: 2rem;
   }
 }
 @media (max-width: 768px) {
