--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,12 @@ section {
   display: none;
 }
 
+@keyframes fadeIn {
+  0% {
+    transform: translateY(3rem);
+    opacity: 0;
+  }
+}
 /* ======= Home Section/Seção inicial ======= */
 .home {
   padding: 0;
@@ -141,8 +147,37 @@ section {
 }
 .home .slide {
   display: flex;
-  min-height: 70vh;
+  min-height: 60vh;
   padding: 2rem 7%;
+  background-size: cover !important;
+  background-position: center !important;
+  display: flex;
+  align-items: center;
+  display: none;
+}
+.home .slide.active {
+  display: flex;
+}
+.home .slide .content span {
+  color: #333;
+  display: block;
+  font-size: 2rem;
+  animation: fadeIn 0.4s linear 0.2s backwards;
+}
+.home .slide .content h3 {
+  color: #333;
+  text-transform: uppercase;
+  padding: 1rem 0;
+  font-size: 6rem;
+  animation: fadeIn 0.4s linear 0.4s backwards;
+}
+.home .slide .content .btn {
+  animation: fadeIn 0.4s linear 0.6s backwards;
+}
+.home #next-slide,
+.home #prev-slide {
+  position: absolute;
+  bottom: 2rem;
 }
 
 /* ======= Footer Section/Seção de rodapé ======= */
