--- a/css/style.scss
+++ b/css/style.scss
@@ -397,7 +397,7 @@ section {
                 span {
                     font-size: 1.5rem;
                     text-decoration: line-through;
-                    color: $light-color
+                    color: $light-color;
                 }
             }
         }
