--- a/css/style.scss
+++ b/css/style.scss
@@ -466,6 +466,7 @@ section {
             font-size: 2.2rem;
             text-transform: uppercase;
             color: $black;
+            margin-bottom: .7rem;
         }
 
         .inpuBox {
@@ -488,7 +489,47 @@ section {
                 padding: 1rem;
                 background: none;
                 font-size: 1.5rem;
+                color: $light-color;
+                text-transform: none;
             }
+        }
+
+        .flex {
+            display: flex;
+            align-items: center;
+            gap: .5rem;
+            padding: 1rem 0;
+            margin-top: 1rem;
+
+            label {
+                font-size: 1.5rem;
+                cursor: pointer;
+                color: $light-color;
+            }
+
+            a {
+                font-size: 1.5rem;
+                color: $light-color;
+                margin-left: auto;
+
+
+                &:hover {
+                    color: $pink;
+                }
+            }
+        }
+
+        input[type="submit"] {
+            background: $black;
+            color: $white;
+
+            &:hover {
+                background: $pink;
+            }
+        }
+
+        .btn {
+            width: 100%;
         }
     }
 }
