--- a/css/style.scss
+++ b/css/style.scss
@@ -619,6 +619,43 @@ section {
         border-radius: .5rem;
         overflow: hidden;
         border: $border;
+
+        .image {
+            width: 100%;
+            height: 25rem;
+            overflow: hidden;
+
+            img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .content {
+            padding: 2rem;
+
+            h3 {
+                font-size: 2rem;
+                color: $black;
+                line-height: 2;
+            }
+
+            p {
+                font-size: 1.4rem;
+                line-height: 2.5rem;
+                color: $light-color;
+                padding: 1rem 0;
+            }
+
+            .icons {
+                border-top: $border;
+                padding-top: 2rem;
+                margin-top: 2rem;
+                display: flex;
+                align-items: center; 
+            }
+        }
     }
 }
 
