--- a/css/style.css
+++ b/css/style.css
@@ -517,6 +517,9 @@ section {
   overflow: hidden;
   border: 0.2rem solid #333;
 }
+.blogs .box-container .box:hover .image img {
+  transform: scale(1.2);
+}
 .blogs .box-container .box .image {
   width: 100%;
   height: 25rem;
@@ -547,6 +550,18 @@ section {
   margin-top: 2rem;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+.blogs .box-container .box .content .icons a {
+  font-size: 1.4rem;
+  color: #666;
+}
+.blogs .box-container .box .content .icons a:hover {
+  color: #e84393;
+}
+.blogs .box-container .box .content .icons a i {
+  padding-right: 0.5rem;
+  color: #e84393;
 }
 
 /* ======= Footer Section/Seção de rodapé ======= */
