--- a/css/style.scss
+++ b/css/style.scss
@@ -620,6 +620,10 @@ section {
         overflow: hidden;
         border: $border;
 
+        &:hover .image img {
+            transform: scale(1.2);
+        }
+
         .image {
             width: 100%;
             height: 25rem;
@@ -653,7 +657,22 @@ section {
                 padding-top: 2rem;
                 margin-top: 2rem;
                 display: flex;
-                align-items: center; 
+                align-items: center;
+                justify-content: space-between;
+                
+                a {
+                    font-size: 1.4rem;
+                    color: $light-color;
+
+                    &:hover {
+                        color: $pink;
+                    }
+
+                    i {
+                        padding-right: .5rem;
+                        color: $pink;
+                    }
+                }
             }
         }
     }
