Shopping cart section

--- a/css/style.scss
+++ b/css/style.scss
@@ -159,7 +159,9 @@ section {
 
     .search-form{
         position: absolute;
-        top:99%; left:0; right:0;
+        top:99%; 
+        left:0; 
+        right:0;
         border-top: $border;
         background: $white;
         height: 6rem;
@@ -681,30 +683,6 @@ section {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* ======= Footer Section/Seção de rodapé ======= */
 .footer {
 
@@ -771,13 +749,6 @@ section {
         }      
     }
 }
-
-
-
-
-
-
-
 
 
 
