--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,7 @@ section {
   color: #e84393;
 }
 
+/* ======= Shopping Cart Section/Seção de Carrinho de compras ======= */
 /* ======= Footer Section/Seção de rodapé ======= */
 .footer .box-container {
   display: grid;
