--- a/css/style.scss
+++ b/css/style.scss
@@ -450,8 +450,6 @@ section {
 
 
 
-
-
 /* ======= Login Form, Register Form/Formulário de login, Formulário de registro ======= */
 .login-form,
 .register-form {
@@ -679,6 +677,11 @@ section {
         }
     }
 }
+
+
+/* ======= Shopping Cart Section/Seção de Carrinho de compras ======= */
+
+
 
 
 
